--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "npx prettier --write src/"
   },
   "dependencies": {
+    "@material/web": "^1.0.0-pre.9",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
